--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,43 @@
     text-align: center;
 }
 
+body {
+    width: 600px;
+    height: auto;
+    margin: 0 auto;
+}
+
 h1 {
     font-size: 30px;
+    margin: 15px auto;
+    padding: 15px;
 }
 h2 {
     font-size: 24px;
 }
 p {
     font-size: 18px;
+  
 }
 a {
     font-size: 18px;
-    text-align: left;
+    text-align: center;
+    display: block;
+    width: 200px;
+    padding: 20px;
+    background-color: darkblue;
+    margin: 15px auto;
+    color: white;
+    text-decoration: none;
 }
 li {
     text-align: left;
+    margin: 20px;
 }
 
 img {
     height: auto;
     width: 600px;
 }
+
 
